parser.output
State 93 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Funcs

    2 Funcs: %empty
    3      | FuncDecl Funcs

    4 FuncDecl: RetType ID LPAREN Formals RPAREN PreConditions LBRACE Statements RBRACE

    5 RetType: Type
    6        | VOID

    7 Formals: %empty
    8        | FormalsList

    9 FormalsList: FormalDecl
   10            | FormalDecl COMMA FormalsList

   11 FormalDecl: Type ID

   12 PreConditions: %empty
   13              | PreConditions PreCondition

   14 PreCondition: PRECOND LPAREN Exp RPAREN

   15 Statements: Statement
   16           | Statements Statement

   17 Statement: LBRACE Statements RBRACE
   18          | Type ID SC
   19          | Type ID ASSIGN Exp SC
   20          | ID ASSIGN Exp SC
   21          | Call SC
   22          | RETURN SC
   23          | RETURN Exp SC
   24          | IF LPAREN Exp RPAREN Statement ELSE Statement
   25          | IF LPAREN Exp RPAREN Statement
   26          | WHILE LPAREN Exp RPAREN Statement
   27          | BREAK SC
   28          | CONTINTUE SC

   29 Call: ID LPAREN ExpList RPAREN
   30     | ID LPAREN RPAREN

   31 ExpList: Exp
   32        | Exp COMMA ExpList

   33 Type: INT
   34     | BYTE
   35     | BOOL

   36 Exp: LPAREN Exp RPAREN
   37    | Exp MULTIPLICATIVE Exp
   38    | Exp ADDITIVE Exp
   39    | ID
   40    | Call
   41    | NUM B
   42    | NUM
   43    | STRING
   44    | TRUE
   45    | FALSE
   46    | NOT Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELATIONAL Exp
   50    | Exp EQUALITY Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 19 20
VOID (259) 6
INT (260) 33
BYTE (261) 34
B (262) 41
BOOL (263) 35
NOT (264) 46
TRUE (265) 44
FALSE (266) 45
RETURN (267) 22 23
IF (268) 24 25
ELSE (269) 24
WHILE (270) 26
BREAK (271) 27
CONTINTUE (272) 28
PRECOND (273) 14
SC (274) 18 19 20 21 22 23 27 28
COMMA (275) 10 32
LBRACE (276) 4 17
RBRACE (277) 4 17
ID (278) 4 11 18 19 20 29 30 39
NUM (279) 41 42
STRING (280) 43
OR (281) 48
AND (282) 47
EQUALITY (283) 50
RELATIONAL (284) 49
ADDITIVE (285) 38
MULTIPLICATIVE (286) 37
LPAREN (287) 4 14 24 25 26 29 30 36
RPAREN (288) 4 14 24 25 26 29 30 36


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
Funcs (36)
    on left: 2 3, on right: 1 3
FuncDecl (37)
    on left: 4, on right: 3
RetType (38)
    on left: 5 6, on right: 4
Formals (39)
    on left: 7 8, on right: 4
FormalsList (40)
    on left: 9 10, on right: 8 10
FormalDecl (41)
    on left: 11, on right: 9 10
PreConditions (42)
    on left: 12 13, on right: 4 13
PreCondition (43)
    on left: 14, on right: 13
Statements (44)
    on left: 15 16, on right: 4 16 17
Statement (45)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28, on right: 15 16 24
    25 26
Call (46)
    on left: 29 30, on right: 21 40
ExpList (47)
    on left: 31 32, on right: 29 32
Type (48)
    on left: 33 34 35, on right: 5 11 18 19
Exp (49)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50, on right:
    14 19 20 23 24 25 26 31 32 36 37 38 46 47 48 49 50


State 0

    0 $accept: . Program $end

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Program   go to state 5
    Funcs     go to state 6
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 1

    6 RetType: VOID .

    $default  reduce using rule 6 (RetType)


State 2

   33 Type: INT .

    $default  reduce using rule 33 (Type)


State 3

   34 Type: BYTE .

    $default  reduce using rule 34 (Type)


State 4

   35 Type: BOOL .

    $default  reduce using rule 35 (Type)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 6

    1 Program: Funcs .

    $default  reduce using rule 1 (Program)


State 7

    3 Funcs: FuncDecl . Funcs

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Funcs     go to state 11
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 8

    4 FuncDecl: RetType . ID LPAREN Formals RPAREN PreConditions LBRACE Statements RBRACE

    ID  shift, and go to state 12


State 9

    5 RetType: Type .

    $default  reduce using rule 5 (RetType)


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    3 Funcs: FuncDecl Funcs .

    $default  reduce using rule 3 (Funcs)


State 12

    4 FuncDecl: RetType ID . LPAREN Formals RPAREN PreConditions LBRACE Statements RBRACE

    LPAREN  shift, and go to state 13


State 13

    4 FuncDecl: RetType ID LPAREN . Formals RPAREN PreConditions LBRACE Statements RBRACE

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 7 (Formals)

    Formals      go to state 14
    FormalsList  go to state 15
    FormalDecl   go to state 16
    Type         go to state 17


State 14

    4 FuncDecl: RetType ID LPAREN Formals . RPAREN PreConditions LBRACE Statements RBRACE

    RPAREN  shift, and go to state 18


State 15

    8 Formals: FormalsList .

    $default  reduce using rule 8 (Formals)


State 16

    9 FormalsList: FormalDecl .
   10            | FormalDecl . COMMA FormalsList

    COMMA  shift, and go to state 19

    $default  reduce using rule 9 (FormalsList)


State 17

   11 FormalDecl: Type . ID

    ID  shift, and go to state 20


State 18

    4 FuncDecl: RetType ID LPAREN Formals RPAREN . PreConditions LBRACE Statements RBRACE

    $default  reduce using rule 12 (PreConditions)

    PreConditions  go to state 21


State 19

   10 FormalsList: FormalDecl COMMA . FormalsList

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    FormalsList  go to state 22
    FormalDecl   go to state 16
    Type         go to state 17


State 20

   11 FormalDecl: Type ID .

    $default  reduce using rule 11 (FormalDecl)


State 21

    4 FuncDecl: RetType ID LPAREN Formals RPAREN PreConditions . LBRACE Statements RBRACE
   13 PreConditions: PreConditions . PreCondition

    PRECOND  shift, and go to state 23
    LBRACE   shift, and go to state 24

    PreCondition  go to state 25


State 22

   10 FormalsList: FormalDecl COMMA FormalsList .

    $default  reduce using rule 10 (FormalsList)


State 23

   14 PreCondition: PRECOND . LPAREN Exp RPAREN

    LPAREN  shift, and go to state 26


State 24

    4 FuncDecl: RetType ID LPAREN Formals RPAREN PreConditions LBRACE . Statements RBRACE

    INT        shift, and go to state 2
    BYTE       shift, and go to state 3
    BOOL       shift, and go to state 4
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    WHILE      shift, and go to state 29
    BREAK      shift, and go to state 30
    CONTINTUE  shift, and go to state 31
    LBRACE     shift, and go to state 32
    ID         shift, and go to state 33

    Statements  go to state 34
    Statement   go to state 35
    Call        go to state 36
    Type        go to state 37


State 25

   13 PreConditions: PreConditions PreCondition .

    $default  reduce using rule 13 (PreConditions)


State 26

   14 PreCondition: PRECOND LPAREN . Exp RPAREN

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 46


State 27

   22 Statement: RETURN . SC
   23          | RETURN . Exp SC

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    SC      shift, and go to state 47
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 48


State 28

   24 Statement: IF . LPAREN Exp RPAREN Statement ELSE Statement
   25          | IF . LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 49


State 29

   26 Statement: WHILE . LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 50


State 30

   27 Statement: BREAK . SC

    SC  shift, and go to state 51


State 31

   28 Statement: CONTINTUE . SC

    SC  shift, and go to state 52


State 32

   17 Statement: LBRACE . Statements RBRACE

    INT        shift, and go to state 2
    BYTE       shift, and go to state 3
    BOOL       shift, and go to state 4
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    WHILE      shift, and go to state 29
    BREAK      shift, and go to state 30
    CONTINTUE  shift, and go to state 31
    LBRACE     shift, and go to state 32
    ID         shift, and go to state 33

    Statements  go to state 53
    Statement   go to state 35
    Call        go to state 36
    Type        go to state 37


State 33

   20 Statement: ID . ASSIGN Exp SC
   29 Call: ID . LPAREN ExpList RPAREN
   30     | ID . LPAREN RPAREN

    ASSIGN  shift, and go to state 54
    LPAREN  shift, and go to state 55


State 34

    4 FuncDecl: RetType ID LPAREN Formals RPAREN PreConditions LBRACE Statements . RBRACE
   16 Statements: Statements . Statement

    INT        shift, and go to state 2
    BYTE       shift, and go to state 3
    BOOL       shift, and go to state 4
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    WHILE      shift, and go to state 29
    BREAK      shift, and go to state 30
    CONTINTUE  shift, and go to state 31
    LBRACE     shift, and go to state 32
    RBRACE     shift, and go to state 56
    ID         shift, and go to state 33

    Statement  go to state 57
    Call       go to state 36
    Type       go to state 37


State 35

   15 Statements: Statement .

    $default  reduce using rule 15 (Statements)


State 36

   21 Statement: Call . SC

    SC  shift, and go to state 58


State 37

   18 Statement: Type . ID SC
   19          | Type . ID ASSIGN Exp SC

    ID  shift, and go to state 59


State 38

   46 Exp: NOT . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 60


State 39

   44 Exp: TRUE .

    $default  reduce using rule 44 (Exp)


State 40

   45 Exp: FALSE .

    $default  reduce using rule 45 (Exp)


State 41

   29 Call: ID . LPAREN ExpList RPAREN
   30     | ID . LPAREN RPAREN
   39 Exp: ID .

    LPAREN  shift, and go to state 55

    $default  reduce using rule 39 (Exp)


State 42

   41 Exp: NUM . B
   42    | NUM .

    B  shift, and go to state 61

    $default  reduce using rule 42 (Exp)


State 43

   43 Exp: STRING .

    $default  reduce using rule 43 (Exp)


State 44

   36 Exp: LPAREN . Exp RPAREN

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 62


State 45

   40 Exp: Call .

    $default  reduce using rule 40 (Exp)


State 46

   14 PreCondition: PRECOND LPAREN Exp . RPAREN
   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68
    RPAREN          shift, and go to state 69


State 47

   22 Statement: RETURN SC .

    $default  reduce using rule 22 (Statement)


State 48

   23 Statement: RETURN Exp . SC
   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    SC              shift, and go to state 70
    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68


State 49

   24 Statement: IF LPAREN . Exp RPAREN Statement ELSE Statement
   25          | IF LPAREN . Exp RPAREN Statement

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 71


State 50

   26 Statement: WHILE LPAREN . Exp RPAREN Statement

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 72


State 51

   27 Statement: BREAK SC .

    $default  reduce using rule 27 (Statement)


State 52

   28 Statement: CONTINTUE SC .

    $default  reduce using rule 28 (Statement)


State 53

   16 Statements: Statements . Statement
   17 Statement: LBRACE Statements . RBRACE

    INT        shift, and go to state 2
    BYTE       shift, and go to state 3
    BOOL       shift, and go to state 4
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    WHILE      shift, and go to state 29
    BREAK      shift, and go to state 30
    CONTINTUE  shift, and go to state 31
    LBRACE     shift, and go to state 32
    RBRACE     shift, and go to state 73
    ID         shift, and go to state 33

    Statement  go to state 57
    Call       go to state 36
    Type       go to state 37


State 54

   20 Statement: ID ASSIGN . Exp SC

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 74


State 55

   29 Call: ID LPAREN . ExpList RPAREN
   30     | ID LPAREN . RPAREN

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44
    RPAREN  shift, and go to state 75

    Call     go to state 45
    ExpList  go to state 76
    Exp      go to state 77


State 56

    4 FuncDecl: RetType ID LPAREN Formals RPAREN PreConditions LBRACE Statements RBRACE .

    $default  reduce using rule 4 (FuncDecl)


State 57

   16 Statements: Statements Statement .

    $default  reduce using rule 16 (Statements)


State 58

   21 Statement: Call SC .

    $default  reduce using rule 21 (Statement)


State 59

   18 Statement: Type ID . SC
   19          | Type ID . ASSIGN Exp SC

    ASSIGN  shift, and go to state 78
    SC      shift, and go to state 79


State 60

   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   46    | NOT Exp .
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 46 (Exp)


State 61

   41 Exp: NUM B .

    $default  reduce using rule 41 (Exp)


State 62

   36 Exp: LPAREN Exp . RPAREN
   37    | Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68
    RPAREN          shift, and go to state 80


State 63

   48 Exp: Exp OR . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 81


State 64

   47 Exp: Exp AND . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 82


State 65

   50 Exp: Exp EQUALITY . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 83


State 66

   49 Exp: Exp RELATIONAL . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 84


State 67

   38 Exp: Exp ADDITIVE . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 85


State 68

   37 Exp: Exp MULTIPLICATIVE . Exp

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 86


State 69

   14 PreCondition: PRECOND LPAREN Exp RPAREN .

    $default  reduce using rule 14 (PreCondition)


State 70

   23 Statement: RETURN Exp SC .

    $default  reduce using rule 23 (Statement)


State 71

   24 Statement: IF LPAREN Exp . RPAREN Statement ELSE Statement
   25          | IF LPAREN Exp . RPAREN Statement
   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68
    RPAREN          shift, and go to state 87


State 72

   26 Statement: WHILE LPAREN Exp . RPAREN Statement
   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68
    RPAREN          shift, and go to state 88


State 73

   17 Statement: LBRACE Statements RBRACE .

    $default  reduce using rule 17 (Statement)


State 74

   20 Statement: ID ASSIGN Exp . SC
   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    SC              shift, and go to state 89
    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68


State 75

   30 Call: ID LPAREN RPAREN .

    $default  reduce using rule 30 (Call)


State 76

   29 Call: ID LPAREN ExpList . RPAREN

    RPAREN  shift, and go to state 90


State 77

   31 ExpList: Exp .
   32        | Exp . COMMA ExpList
   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    COMMA           shift, and go to state 91
    OR              shift, and go to state 63
    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 31 (ExpList)


State 78

   19 Statement: Type ID ASSIGN . Exp SC

    NOT     shift, and go to state 38
    TRUE    shift, and go to state 39
    FALSE   shift, and go to state 40
    ID      shift, and go to state 41
    NUM     shift, and go to state 42
    STRING  shift, and go to state 43
    LPAREN  shift, and go to state 44

    Call  go to state 45
    Exp   go to state 92


State 79

   18 Statement: Type ID SC .

    $default  reduce using rule 18 (Statement)


State 80

   36 Exp: LPAREN Exp RPAREN .

    $default  reduce using rule 36 (Exp)


State 81

   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   48    | Exp OR Exp .
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    AND             shift, and go to state 64
    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 48 (Exp)


State 82

   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   47    | Exp AND Exp .
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    EQUALITY        shift, and go to state 65
    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 47 (Exp)


State 83

   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp
   50    | Exp EQUALITY Exp .

    RELATIONAL      shift, and go to state 66
    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 50 (Exp)


State 84

   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   49    | Exp RELATIONAL Exp .
   50    | Exp . EQUALITY Exp

    ADDITIVE        shift, and go to state 67
    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 49 (Exp)


State 85

   37 Exp: Exp . MULTIPLICATIVE Exp
   38    | Exp . ADDITIVE Exp
   38    | Exp ADDITIVE Exp .
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    MULTIPLICATIVE  shift, and go to state 68

    $default  reduce using rule 38 (Exp)


State 86

   37 Exp: Exp . MULTIPLICATIVE Exp
   37    | Exp MULTIPLICATIVE Exp .
   38    | Exp . ADDITIVE Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELATIONAL Exp
   50    | Exp . EQUALITY Exp

    $default  reduce using rule 37 (Exp)


State 87

   24 Statement: IF LPAREN Exp RPAREN . Statement ELSE Statement
   25          | IF LPAREN Exp RPAREN . Statement

    INT        shift, and go to state 2
    BYTE       shift, and go to state 3
    BOOL       shift, and go to state 4
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    WHILE      shift, and go to state 29
    BREAK      shift, and go to state 30
    CONTINTUE  shift, and go to state 31
    LBRACE     shift, and go to state 32
    ID         shift, and go to state 33

    Statement  go to state 93
    Call       go to state 36
    Type       go to state 37


State 88

   26 Statement: WHILE LPAREN Exp RPAREN . Statement

    INT        shift, and go to state 2
    BYTE       shift, and go to state 3
    BOOL       shift, and go to state 4
    RETURN     shift, and go to state 27
    IF         shift, and go to state 28
    WHILE      shift, and go to state 29
    BREAK      shift, and go to state 30
    CONTINTUE  shift, and go to state 31
    LBRACE     shift, and go to state 32
    ID         shift, and go to state 33

    Statement  go to state 94
    Call       go to state 36
    Type       go to state 37


State 89

   20 Statement: ID ASSIGN Exp SC .

    $default  reduce using rule 20 (Statement)


State 90

   29 Call: ID LPAREN ExpList RPAREN .

    $default  reduce using rule 29 (Call)


State 91

   32 ExpList: Exp COMMA . ExpList
